--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.11.3",
     "next": "14.2.4",
     "nextjs-toploader": "^1.6.12",
+    "pdfjs-dist": "^4.5.136",
     "react": "^18",
     "react-dom": "^18",
     "sqlite": "^5.1.1",
